--- a/style.css
+++ b/style.css
@@ -1,755 +1,305 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 :root {
-    --text-base: #afb6c2;
-    --text-title: #d4ccb6;
-    --background: #191816;
-    --form-background: #24221f;
-    --primary-color: #ffc632;
-    --font-poppins:'Poppins', sans-serif;
-    --font-Roboto:'Roboto', sans-serif;
+    --body-bg-color: #FAF7FD;
+    --purple: #BB99DD;
+  }
+
+  #head{
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 70px;
+    padding: 20px 0;
+    background-color: transparent;
+  }
+
+  #head.styck {
+    background-color: black;
   }
 
 
-section {
-    overflow: hidden;
-    width: 100%;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
+  #head figure img {
+    width: 80px;
+  }
 
-input[type="checkbox"]{
-    appearance: none;
-    -webkit-appearance: none;
+  .copieConfirm {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    font-family: "Roboto";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    background-color: rgba(26, 25, 25, 0.788);
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .copieConfirm.active{
+    opacity: 1;
+    visibility: visible;
+    transition: all .35s ease;
+  }
+
+  .copieConfirm h2 {
+    font-size: 2rem;
+    color: white;
+  }
+
+  body {
+    position: relative;
+      background: var(--body-bg-color);
+      height: 105vh;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: "Roboto",sans-serif;
+      background-color: #309797;
+      background: linear-gradient(125deg, rgba(92, 90, 90, 0.767) 45%, rgba(90, 85, 85, 0.521) 55%);
+    background-repeat: no-repeat;
+    scroll-behavior: smooth;
+  }
+
+  .shared-icon{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    height: 35px;
+    width: 40px;
+    background-color: white;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .shared-icon::after{
+    position: absolute;
+    content: " ";
     width: 20px;
     height: 20px;
-    border: .1rem solid grey;
-    border-radius: 4px;
-    background: transparent;
-    cursor: pointer;
-}
-
-input[type="checkbox"]:checked{
-    background: var(--primary-color);
-    background-image: url(images/check.svg);
-    border:none;
-}
-
-input:focus{
-    border: 1px solid var(--primary-color);
-}
-
-label {
-    color: var(--text-title);
-    font-family: var(--font-poppins);
-    font-weight: 500;
-}
-
-button {
-    margin-top: 1.4rem;
-    width:62%;
-    padding:1rem;
-    color: #473404;
-    font-family: var(--font-poppins);
-    font-weight: 600;
-    background: var(--primary-color);
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-bottom: 1.4rem;
-}
-
-button:hover{
-    background:#ffc532ee;
-    
-}
-
-section .logo {
-    margin: 1rem;
-}
-
-section .left .form {
-    width: 78%;
-    height: 70vh;
-    margin-left: 4rem;
-    margin-top: 3rem;
-    background:var(--form-background);
-    color: var(  --text-title);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 4px; 
-    z-index: 1;
-}
-
-
-section .left .form.showForm{
+    transform: rotate(135deg);
+    left: -32px;
+    background-color: white;
+    z-index: 0;
     opacity: 0;
-    display:none;
     visibility: hidden;
-}
+  }
 
-section .form form {
-    width: 100%;
-    text-align: left;
-    display: flex;
-    text-align: left;
-    align-items: center;
-    flex-direction: column;
-    justify-content:center;
-}
-
-section .form form p{
-    color: var(--primary-color);
-}
-section .form form p span {
-    font-weight: 600;
-    font-family: var(--font-poppins);
-    cursor: pointer;
-}
-section .form form p span:hover{
-    text-decoration: underline;
-}
-
-section .form form .inputemail{
-    width: 100%;
-    display: flex;
-    color: var(--text-title);
-    border: .1rem solid grey;
-    border-radius: 4px;
-    position: relative;
-    margin-bottom: 1.5rem;
-}
-
-section .form form .inputemail img{
-    width: 20px;
-    margin-left: 0.5rem;
+  .shared-icon::before{
     position: absolute;
-    top: 10px!important;
-}
-
-section .form form .inputemail img:nth-child(4){
-    opacity: 0;
-    visibility: hidden;
-}
-
-
-section .form form .inputemail input{
-    width: 100%;
-    padding: 0.8rem;
-    padding-left: 2rem;
-    background: transparent;
-    color: var(--text-title);
-    border:none;
+    left: -125px;
+    content: "Compartilhar";
+    font-family: "Roboto";
+    font-size: 1rem;
+    background-color: white;
+    padding: 10px 5px;
     border-radius: 4px;
-    outline: none!important;
-}
-
-
-section .form form .inputemail input:focus{
-    border: 1px solid var(--primary-color)
-}
-
-section .form form .inputemail img:nth-child(4){
+    z-index: 1;
     opacity: 0;
     visibility: hidden;
-}
+    transition: transform 1s ease;
+    transform: translateX(20px);
+  }
 
-
-section .form form .inputemail #mail.ative{
+  .shared-icon:hover::after{
     opacity: 1;
     visibility: visible;
-    z-index: 1;
+  }
+
+  .shared-icon:hover::before{
+    transform: translateX(0px);
+    opacity: 1;
+    visibility: visible;
+    transition: transform .45s ease;
+  }
+
+  .shared-icon:hover{
+    background-color: rgba(25, 77, 219, 0.89);
+    transition: all 1s ease;
+    border: 1px solid white;
+  }
+
+    .shared-icon img{
+      width: 120px;
+    }
+
+
+a {      
+    text-decoration: none;
+    color: black;
+
 }
 
-       
-section form .title {
-    text-align: center;
-    padding-left: 10px;
-}
+  .socialTree {
+      text-align: center;
+      margin-top: 2rem;
+  }
 
+  .socialTree figure img{
+        width: 100px;
+        height: 140px;
+        border-radius:20px;
+        margin-top: 2rem;
+        background-color: black;
+        border: 2px solid white;
+  }
 
-section form .title h2 {
+  .socialTree  > h1 {
+      font-family: "Roboto";
+      font-size: 1.5rem;
+      font-weight: 600;
+      margin: 1rem 0;
+      color: white;
+  }
+
+  .socialTree > h2 {
+    margin: 20px 0;
+    font-size: .9rem;
     color: white;
-    margin: 0.9rem;
-    margin-bottom: 0.8rem;
-}
+    letter-spacing: 3px;
+  }
 
-
-section form .title p {
-    margin: 0.9rem;
-    margin-bottom: 1rem;
-    color: var(--text-title);
-}
-
-section .form form .inputsenha{
-    flex-direction: column;
+  .socialTree button{
     width: 100%;
     position: relative;
-    border-radius: 4px;
-}
-
-section .form form .inputsenha #lock{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 1;
-}
-
-
-section .form form .inputsenha #lock.ativo{
-    opacity: 1;
-    visibility: visible;
-}
-
-
-section .form form .inputsenha > i {
-    position: absolute;
-    top: 12px;
-    left: 210px!important;
-    font-size: 1.2rem;
-    opacity: 0;
-}
-
-section .form form .inputsenha #blindEye.activo{
-    opacity: 1;
-    visibility: visible;
-    z-index: 1;
+    overflow: hidden;
+    margin-top: 20px;
+    font-family: "Roboto";
+    background-color: transparent;
+    padding: 15px;
+    border: 1px solid black;
     cursor: pointer;
+    border-radius: 8px;
+  }
 
-}
-
-section .form form .inputsenha .eye {
-    position: absolute;
-    top: 12px;
-    left: 210px;
-    cursor: pointer;
-}
-
-section .form form .inputsenha .eye.removeEye {
-    opacity: 0;
-    visibility: hidden;
-}
-
-section .form form .inputsenha input{
-    width: 100%;
-    padding: 0.8rem;
-    padding-left: 2rem;
-    background: transparent;
-    color: var(--text-title);
-    border-radius: 4px;
-    border: none;
-    outline: none;
-    margin-bottom: 1rem;
-    position: relative;
-    border: 1px solid var(--text-title);
-}
-
-section .form form .inputsenha input:focus{
-    border: 1px solid var(--primary-color);
-}
-
-
-section .form form .inputsenha img {
-    position: absolute;
-    left: 10px;
-    top: 10px;
-}
-
-section form .title h2 {
-    color: white;
-    margin-bottom: 0.8rem;
-}
-
-
-section form .title p {
-    margin-bottom: 1rem;
-
-}
-
-section .left {
-    background: var(--background);
-}
-
-section .form form .check {
-    display: flex;
-    align-items: center;
-    line-height: 0;
-    justify-content:center;
-    margin-top: 1rem;
-}
-
-
-section .form form .check label {
-    font-family: var(--font-Roboto);
-    font-weight: 400;
-    background: #A9AFB9;
-
-}
-
-section .form form .check p{
-    cursor: pointer;
-    color: var(--primary-color);
-    font-weight: 600;
-    font-family: var(--font-poppins);
-}
-section .form form .check p:hover{
-    text-decoration: underline;
-}
-
-section .form form .check input {
-    margin-right: 0.2rem;
-   
-}
-
-
-section .form form .check label {
-    margin-right: 2.5rem;
-    font-family: var(--font-Roboto);
-    font-weight: 600;
-}
-
-/* criar conta */ 
-
-section .left {
-    position: relative;
-
-}
-
-section .forgetForm {
-    opacity: 0;
-    visibility: hidden;
-    display: none;
-    position: absolute;
-    top: 100px;
-    background: var(--form-background);
-    width: 78%;
-    height: 82vh;
-    margin-left: 4rem;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    transform: translateX(-50%);
-    z-index: 1;
-}
-
-section .forgetForm.showForget{
-    opacity: 1!important;
-    visibility: visible!important;
-    display: flex!important;
-    transform: translateX(0%);
-    transition: transform .35s ease;
-}
-
-
-section .forgetForm form p {
-    color: var(--primary-color);
-}
-
-
-section .forgetForm form p span {
+  .socialTree button p{
     font-weight: 700;
-    font-family: var(--font-Roboto);
-    cursor: pointer;
-}
+    font-family: "Roboto";
+    font-size: .8rem;
+    letter-spacing: 2px;
+    color: black;
+  }
 
-section .forgetForm form p span:hover{
-    text-decoration: underline;
-}
+  .socialTree button:hover p{
+    
+    transform: translateY(50px);
+    transition: transform 1s ease;
+   }
 
-section .forgetForm form .check p {
-    cursor: pointer;
-    font-weight: 700;
-    font-family: var(--font-Roboto);
-    color: var(--primary-color);
-}
-
-section .forgetForm form .check p:hover{
-    text-decoration: underline;
-}
-
-section .forgetForm form .emailCreate {
-    position: relative;
-}
-
-section .forgetForm form .emailCreate input{
-    width: 80%;
-    padding: 0.8rem;
-    padding-left: 2rem;
-    background: transparent;
-    color: var(--text-title);
-    border: .1rem solid grey;
-    border-radius: 4px;
-    outline: none;
-    margin-bottom: 1rem;
-}
-
-
-section .forgetForm form .senhaCreate{
-    position: relative;
-}
-
-section .forgetForm form .senhaCreate input{
-    width: 80%;
-    padding: 0.8rem;
-    padding-left: 2rem;
-    background: transparent;
-    color: var(--text-title);
-    border: .1rem solid grey;
-    border-radius: 4px;
-    outline: none;
-    margin-bottom: 1rem;
-    position: relative;
-}
-
-section .forgetForm form .senhaCreate > img:nth-child(1) {
+  .socialTree button img{
     position: absolute;
-    top: 10px;
-    left: 41px;
-}
-section .forgetForm form .senhaCreate > img:nth-child(4) {
-    position: absolute;
-    top: 10px;
-    left: 290px;
-}
+    top: -50px;
+    width: 40px;
+  }
 
-section .forgetForm form .emailCreate img {
-    position:absolute;
-    top: 10px;
-    left: 41px;
-}
+  .socialTree button:hover img{
+    top: 5px;
+    left: 130px;
+    transition: top 1s ease
+  }
 
+  .socialTree ul {
+    max-height: 200px;
+    overflow-y: hidden;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+    transition: max-height 1s ease;
+  }
 
-section .forgetForm form .senhaCreate i {
-    position:absolute;
-    top: 10px;
-    left: 290px;
-    opacity: 0;
-}
+  .socialTree ul.show{
+    max-height: 350px;
+    transition: max-height 1s ease;
+  }
 
-section .forgetForm form .Confirmsenha {
-    position: relative
-}
-
-section .forgetForm form .Confirmsenha input{
-    width: 80%;
-    padding: 0.8rem;
-    padding-left: 2rem;
-    background: transparent;
-    color: var(--text-title);
-    border: .1rem solid grey;
-    border-radius: 4px;
-    outline: none;
-    margin-bottom: 1rem;
-}
-
-section .forgetForm form .Confirmsenha .lock {
-    position:absolute;
-    top: 10px;
-    left: 10px;
-}
-
-
-
-section .forgetForm form .Confirmsenha img:nth-child(1){
-    top: 10px;
-    left: 41px;
-}
-
-section .forgetForm form .Confirmsenha img:nth-child(3) {
-    top: 10px;
-    left: 290px;
-    position: absolute;
-}
-
-/** form Password **/
-
-section .left .Forgetpassword{
-    opacity: 0;
-    visibility: hidden;
-    display: none;
-    position: absolute;
-    top: 100px;
-    background: var(--form-background);
-    width: 78%;
-    height: 70vh;
-    margin-left: 4rem;
+  .socialTree ul li {
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translateX(50%);
+    position: relative;
+    box-shadow: 0px 0px 4px 0px grey;
+    border-radius: 7px;
+      width: 300px;
+      list-style: none;
+      padding: 20px 0;
+      margin-bottom: 0.8rem;
+      cursor: pointer;
+      background-color:rgba(255, 255, 255, 0.747);
+      font-family: "Roboto";
+    letter-spacing: 2px;
+  }
+
+  .socialTree ul li::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0%;
+    height: 100%;
+    border-radius: 7px;
+  }
+
+  .socialTree ul li:hover:before{
+    background-color: #1a1919;
+    width: 100%;
+    transition: all 1s ease;
+  }
+
+  .socialTree ul li:hover {
+      transition: all .25s ease;
+      transform: translateY(-10%);
+      animation: shake 1s infinite;
+  }
+
+  .socialTree ul li a{
+    color: black;
+    position: absolute;
+    left: 100px;
+    top: 10px;
     z-index: 1;
-}
+  }
 
-section .left .Forgetpassword.ShowFormPassword {
-    opacity: 1;
-    visibility: visible;
-    display: flex;
-    transform: translateX(0%);
-    transition: transform .35s ease;
-}
+  .socialTree ul li:hover a{
+  color: white;
+  }
+  
 
+  @keyframes shake {
+        0%{
+            transform: rotateX(0deg);
+        }
+        25%{
+                transform: rotateX(10deg);
+        }
+        50%{
+            transform: rotateY(12deg);
 
-section .left .Forgetpassword form {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
+        }
+        100%{
+            transform: rotateX(10deg);
+        }
+  }
 
-section .left .Forgetpassword form h2 {
-    color: var(--text-title);
-    font-family: var(--font-poppins);
-    font-weight: 700;
-    margin-bottom: 1rem;
-}
-
-section .left .Forgetpassword form p {
-    margin-bottom: 1rem;
-    color: var(--text-title);
-}
-
-section .left .Forgetpassword form .emailPassword {
-    position: relative;
-}
-
-
-section .left .Forgetpassword form .emailPassword p {
-    margin-top: 1rem;
-    cursor:pointer;
-    font-family: var(--font-Roboto);
-    font-weight: 600;
-    color: var(--primary-color)
-}
-
-section .left .Forgetpassword form .emailPassword p:hover {
-    text-decoration: underline;
-}
-
-section .left .Forgetpassword form .emailPassword img {
-    position: absolute;
-    top: 15px;
-    left: 10px;
-}
-
-section .left .Forgetpassword form .emailPassword label {
-    font-weight: 600;
-    font-family: var(--font-poppins);
-}
-
-section .left .Forgetpassword form .emailPassword input {
-    padding: 1rem;
-    width: 80%;
-    color: white;
-    border-radius: 4px;
-    border:.1rem solid var(--text-title);
-    background: transparent;
-    outline: none;
-    padding-left: 2rem;
-}
-
-
-.right {
-    background-image: url(images/side-image.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-@media(max-width: 1275px){
-
-    section {    
-        width: 100%;
-        height: 100vh;
-        display: grid;
-        grid-template-columns: 60% 40%;
+  @media (prefers-reduced-motion){
+    body, html {
+      scroll-behavior: initial;
     }
-
-    section .form form .inputsenha .eye {
-        position: absolute;
-        top: 12px;
-        left: 200px;
-        cursor: pointer;
-    }
-
-    section .form form .inputemail img{
-        top: 19px;
-    }
-
-    section .form form .inputemail input {
-        height: 65%;
-    }
-}
-
-@media(max-width: 815px){
-    section {    
-        width: 100%;
-        height: 100vh;
-        display: grid;
-        flex-direction: column;
-        grid-template-columns: 65% 45%;
-        grid-area: "left left" "right right";
-    }
-
-        
-
-    section .form form .inputsenha .eye {
-        position: absolute;
-        top: 12px;
-        left: 220px!important;
-        cursor: pointer;
-    }
-
-
-section .form form .inputsenha > i {
-    position: absolute;
-    top: 12px;
-    left: 219px;
-    font-size: 1.2rem;
-    opacity: 0;
-}
-
-
-    section .left {
-        grid-area: 'left';
-    }
-
-    section .right {
-        grid-area: 'right';
-    }
-}
-
-@media(max-width: 671px){
-
-    section .form form .inputemail img{
-        top: 11px;
-    }
-
-section .forgetForm {
-    text-align: left;
-    width: 100%;
-    height: 82vh;
-    margin-left: 0;
-}
-
-
-section .left .Forgetpassword{
-    width: 100%;
-    height: 70vh;
-    margin-left: 0rem; 
-}
-
-
-
-section .left .Forgetpassword form p {
-    padding-right: 1.5rem;
-    text-align: center;
-}
-
-section .left .Forgetpassword form .emailPassword img {
-    position: absolute;
-    top: 15px;
-    left: 10px;
-}
-
-section .left .Forgetpassword form{
-    text-align: left;
-}
-
-section .left .Forgetpassword form .emailPassword input{
-    width: 100%;
-}
-
-    section .left .form {
-        width: 100%;
-        height: 70vh;
-        margin-left: 0rem;
-    }
-
-    section .left form {
-        text-align: center;
-        padding-left: 1.5rem;
-    }
-
-    section .forgetForm form .senhaCreate > img:nth-child(1) {
-        position: absolute;
-        top: 10px;
-        left: 40px;
-    }
-    section .forgetForm form .senhaCreate > img:nth-child(4) {
-        position: absolute;
-        top: 10px;
-        left: 270px;
-    }
-    
-    section .forgetForm form .emailCreate img {
-        position:absolute;
-        top: 10px;
-        left: 40px;
-        
-    }
-    
-    section .forgetForm form .senhaCreate i {
-        position:absolute;
-        top: 40px;
-        left: 270px;
-        opacity: 0;
-    }
-        
-    section .forgetForm form .Confirmsenha img:nth-child(1){
-        top: 10px;
-        left: 40px;
-    }
-    
-    section .forgetForm form .Confirmsenha img:nth-child(3) {
-        top: 10px;
-        left: 270px;
-        position: absolute;
-    }
-
-    section .form form .check label {
-        font-size: 0.8rem;
-    }
-    
-    section .form form .check p{  
-        font-size: 0.8rem;
-    }
-
-    section {
-        grid-template-columns: 100%;
-    }
-
-    section .right {
-        display:none;
-    }
-}
-
-
-@media (max-width: 255px) {
-    section .form form .inputsenha > i {
-        position: absolute;
-        top: 12px;
-        left: 110px!important;
-        font-size: 1.2rem;
-        opacity: 0;
-    }
-    
-    section .form form .inputsenha .eye {
-        position: absolute;
-        top: 12px;
-        left: 110px!important;
-        cursor: pointer;
-    }
-}
+  }
